GRPC/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grpc-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /grpc
        backend:
          serviceName: grpc-service
          servicePort: 5000
      - path: /juego
        backend:
          serviceName: hello-world
          servicePort: 80
